--- a/index.html
+++ b/index.html
@@ -402,57 +402,70 @@
         padding: 0.25rem 0;
       }
     }
+    /* Focus styles for accessibility */
+    button:focus-visible, input:focus-visible, textarea:focus-visible, #helpText:focus-visible {
+      outline: 2px solid #3b82f6;
+      outline-offset: 2px;
+    }
   </style>
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center">
-  <div class="corner-logo" id="cornerLogo"></div>
+  <div class="corner-logo" id="cornerLogo" role="img" aria-label="Anonomoose Chat logo"></div>
   <div class="flex w-full max-w-xl">
     <div class="bg-white p-8 rounded-lg shadow-lg flex-grow">
       <h1 class="text-3xl font-bold mb-6 text-center text-gray-800">Anonomoose Chat</h1>
-      <div id="status" class="text-center mb-4 text-gray-600">Start a new chat or connect to an existing one</div>
+      <div id="status" class="text-center mb-4 text-gray-600" role="alert">Start a new chat or connect to an existing one</div>
       <div id="initialContainer">
-        <button id="startChatToggleButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full mb-2 hover:bg-blue-600 transition-colors">Start Chat</button>
-        <button id="connectToggleButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600 transition-colors">Connect to Chat</button>
+        <button id="startChatToggleButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full mb-2 hover:bg-blue-600 transition-colors" aria-label="Start a new chat">Start Chat</button>
+        <button id="connectToggleButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600 transition-colors" aria-label="Connect to an existing chat">Connect to Chat</button>
       </div>
       <div id="usernameContainer" class="hidden">
-        <input id="usernameInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)">
-        <button id="joinWithUsernameButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full hover:bg-blue-600 transition-colors">Join Chat</button>
-        <button id="backButton" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors">Back</button>
+        <label for="usernameInput" class="sr-only">Enter your username</label>
+        <input id="usernameInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)" aria-describedby="usernameHelp">
+        <div id="usernameHelp" class="text-sm text-gray-500 mb-2">Username must be 1-16 alphanumeric characters</div>
+        <button id="joinWithUsernameButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full hover:bg-blue-600 transition-colors" aria-label="Join chat with username">Join Chat</button>
+        <button id="backButton" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors" aria-label="Back to main menu">Back</button>
       </div>
-      <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden"></div>
+      <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden" role="status"></div>
       <div id="chatContainer" class="hidden">
-        <button id="newSessionButton" class="bg-red-500 text-white px-2 py-1 rounded w-full mb-1 rounded hover:bg-red-600 transition-colors hidden">New Session</button>
+        <button id="newSessionButton" class="bg-red-500 text-white px-2 py-1 rounded w-full mb-1 rounded hover:bg-red-600 transition-colors hidden" aria-label="Start a new session">New Session</button>
         <div class="button-group">
-          <button id="button1">Send Code</button>
-          <button id="button2">Random Chat</button>
-          <button id="copyCodeButton">Copy Code</button>
+          <button id="button1" aria-label="Send chat code to random board">Send Code</button>
+          <button id="button2" aria-label="Join a random chat">Random Chat</button>
+          <button id="copyCodeButton" aria-label="Copy chat code">Copy Code</button>
         </div>
-        <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
+        <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded" role="log" aria-live="polite"></div>
         <div class="input-container hidden">
-          <textarea id="messageInput" placeholder="Type a message..." cols="30" maxlength="1000"></textarea>
-          <input type="file" id="imageInput" accept="image/*" style="display: none;" />
-          <button id="imageButton" title="Send Image">📷</button>
-          <button id="sendButton">📤</button>
+          <label for="messageInput" class="sr-only">Type your message</label>
+          <textarea id="messageInput" placeholder="Type a message..." cols="30" maxlength="1000" aria-describedby="messageHelp"></textarea>
+          <div id="messageHelp" class="sr-only">Enter your message, press Enter to send, Shift+Enter for new line</div>
+          <input type="file" id="imageInput" accept="image/*" style="display: none;" aria-label="Select image to send" />
+          <button id="imageButton" aria-label="Send image">📷</button>
+          <button id="sendButton" aria-label="Send message">📤</button>
         </div>
       </div>
       <div id="connectContainer" class="hidden">
-        <input id="usernameConnectInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)">
-        <input id="codeInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter code (xxxx-xxxx-xxxx-xxxx)">
-        <button id="connectButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600 transition-colors">Connect</button>
-        <button id="backButtonConnect" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors">Back</button>
+        <label for="usernameConnectInput" class="sr-only">Enter your username</label>
+        <input id="usernameConnectInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)" aria-describedby="usernameConnectHelp">
+        <div id="usernameConnectHelp" class="text-sm text-gray-500 mb-2">Username must be 1-16 alphanumeric characters</div>
+        <label for="codeInput" class="sr-only">Enter chat code</label>
+        <input id="codeInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter code (xxxx-xxxx-xxxx-xxxx)" aria-describedby="codeHelp">
+        <div id="codeHelp" class="text-sm text-gray-500 mb-2">Code format: xxxx-xxxx-xxxx-xxxx</div>
+        <button id="connectButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600 transition-colors" aria-label="Connect to chat with username and code">Connect</button>
+        <button id="backButtonConnect" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors" aria-label="Back to main menu">Back</button>
       </div>
       <div class="text-center mt-4">
-        <span id="helpText" class="text-blue-500 hover:underline">Help</span>
+        <span id="helpText" class="text-blue-500 hover:underline" tabindex="0" role="button" aria-label="Show help information">Help</span>
       </div>
     </div>
     <div id="maxClientsContainer" class="hidden flex flex-col justify-center bg-black p-4 rounded-lg shadow-lg">
-      <span class="text-white mb-2 font-bold">Max Users</span>
-      <div id="maxClientsRadios" class="flex flex-col space-y-2"></div>
+      <span class="text-white mb-2 font-bold" id="maxClientsLabel">Max Users</span>
+      <div id="maxClientsRadios" class="flex flex-col space-y-2" role="radiogroup" aria-labelledby="maxClientsLabel"></div>
     </div>
   </div>
-  <div id="helpModal" class="help-modal">
+  <div id="helpModal" class="help-modal" role="dialog" aria-labelledby="helpModalTitle">
     <div class="help-modal-content">
-      <h2 class="text-xl font-bold mb-4">Button Help</h2>
+      <h2 id="helpModalTitle" class="text-xl font-bold mb-4">Button Help</h2>
       <p><strong>Start Chat:</strong> Starts New Chat</p>
       <p><strong>Connect to Chat:</strong> This connects you to a chat that you have code for</p>
       <p><strong>Send Code:</strong> This sends your code to Random chat board</p>
@@ -478,7 +491,7 @@
     function sanitizeMessage(content) {
       const div = document.createElement('div');
       div.textContent = content;
-      return div.innerHTML.replace(/</g, '&lt;').replace(/>/g, '&gt;');
+      return div.innerHTML.replace(/</g, '<').replace(/>/g, '>');
     }
 
     function generateCode() {
@@ -554,6 +567,7 @@
       messageDiv.textContent = `${username}: `;
       const imgElement = document.createElement('img');
       imgElement.src = base64;
+      imgElement.alt = `Image sent by ${username}`;
       imgElement.style.maxWidth = '100%';
       imgElement.style.borderRadius = '0.5rem';
       imgElement.style.cursor = 'pointer';
@@ -563,15 +577,25 @@
           modal = document.createElement('div');
           modal.id = 'imageModal';
           modal.className = 'modal';
+          modal.setAttribute('role', 'dialog');
+          modal.setAttribute('aria-label', 'Image preview');
           document.body.appendChild(modal);
         }
         modal.innerHTML = '';
         const modalImg = document.createElement('img');
         modalImg.src = base64;
+        modalImg.alt = `Image sent by ${username}`;
         modal.appendChild(modalImg);
         modal.classList.add('active');
         modal.addEventListener('click', () => {
           modal.classList.remove('active');
+          document.getElementById('imageButton').focus();
+        });
+        modal.addEventListener('keydown', (e) => {
+          if (e.key === 'Escape') {
+            modal.classList.remove('active');
+            document.getElementById('imageButton').focus();
+          }
         });
       });
       messageDiv.appendChild(imgElement);
@@ -619,13 +643,30 @@
     const helpText = document.getElementById('helpText');
     const helpModal = document.getElementById('helpModal');
 
-    // Help modal toggle
+    // Help modal toggle with keyboard support
     helpText.addEventListener('click', () => {
       helpModal.classList.add('active');
+      helpModal.querySelector('.help-modal-content').focus();
+    });
+
+    helpText.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter' || e.key === ' ') {
+        e.preventDefault();
+        helpModal.classList.add('active');
+        helpModal.querySelector('.help-modal-content').focus();
+      }
     });
 
     helpModal.addEventListener('click', () => {
       helpModal.classList.remove('active');
+      helpText.focus();
+    });
+
+    helpModal.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') {
+        helpModal.classList.remove('active');
+        helpText.focus();
+      }
     });
 
     // Logo cycle animation
@@ -648,7 +689,7 @@
           socket.send(JSON.stringify({ type: 'ping', clientId }));
           console.log('Sent keepalive ping');
         }
-      }, 20000); // Send every 20 seconds
+      }, 20000);
     }
 
     function stopKeepAlive() {
@@ -665,8 +706,8 @@
     socket.onopen = () => {
       console.log('WebSocket opened');
       socket.send(JSON.stringify({ type: 'connect', clientId }));
-      startKeepAlive(); // Start keepalive on connection
-      reconnectAttempts = 0; // Reset reconnection attempts on successful connection
+      startKeepAlive();
+      reconnectAttempts = 0;
       const urlParams = new URLSearchParams(window.location.search);
       const codeParam = urlParams.get('code');
       if (codeParam && validateCode(codeParam)) {
@@ -695,7 +736,7 @@
       console.error('WebSocket closed, attempting reconnect');
       stopKeepAlive();
       showStatusMessage('Lost connection, reconnecting...');
-      const delay = Math.min(30000, 5000 * Math.pow(2, reconnectAttempts)); // Exponential backoff: 5s, 10s, 20s, max 30s
+      const delay = Math.min(30000, 5000 * Math.pow(2, reconnectAttempts));
       reconnectAttempts++;
       setTimeout(() => {
         const newSocket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
@@ -821,6 +862,7 @@
           input.value = n;
           input.className = 'mr-2';
           input.checked = n === maxClients;
+          input.setAttribute('aria-label', `Set maximum users to ${n}`);
           input.addEventListener('change', () => {
             if (isInitiator) {
               setMaxClients(parseInt(input.value));
@@ -1007,6 +1049,7 @@
         clearTimeout(connectionTimeouts.get(targetId));
         retryCounts.delete(targetId);
         updateMaxClientsUI();
+        document.getElementById('messageInput').focus();
       };
 
       dataChannel.onmessage = (event) => {
@@ -1050,6 +1093,7 @@
           messageDiv.textContent = `${senderUsername}: `;
           const img = document.createElement('img');
           img.src = data.data;
+          img.alt = `Image sent by ${senderUsername}`;
           img.style.maxWidth = '100%';
           img.style.borderRadius = '0.5rem';
           img.style.cursor = 'pointer';
@@ -1059,15 +1103,25 @@
               modal = document.createElement('div');
               modal.id = 'imageModal';
               modal.className = 'modal';
+              modal.setAttribute('role', 'dialog');
+              modal.setAttribute('aria-label', 'Image preview');
               document.body.appendChild(modal);
             }
             modal.innerHTML = '';
             const modalImg = document.createElement('img');
             modalImg.src = data.data;
+            modalImg.alt = `Image sent by ${senderUsername}`;
             modal.appendChild(modalImg);
             modal.classList.add('active');
             modal.addEventListener('click', () => {
               modal.classList.remove('active');
+              document.getElementById('imageButton').focus();
+            });
+            modal.addEventListener('keydown', (e) => {
+              if (e.key === 'Escape') {
+                modal.classList.remove('active');
+                document.getElementById('imageButton').focus();
+              }
             });
           });
           messageDiv.appendChild(img);
@@ -1229,9 +1283,6 @@
         messageDiv.textContent = `${username}: ${sanitizedContent}`;
         messages.prepend(messageDiv);
         messages.scrollTop = messages.scrollHeight;
-        const messageInput = document.getElementById('messageInput');
-        messageInput.value = '';
-        messageInput.style.height = '2.5rem';
         processedMessageIds.add(messageId);
       } else {
         showStatusMessage('Error: No connections or username not set.');
@@ -1248,6 +1299,7 @@
       copyCodeButton.classList.add('hidden');
       statusElement.textContent = 'Enter a username to start a chat';
       document.getElementById('usernameInput').value = username || '';
+      document.getElementById('usernameInput').focus();
     };
 
     document.getElementById('connectToggleButton').onclick = () => {
@@ -1260,18 +1312,20 @@
       copyCodeButton.classList.add('hidden');
       statusElement.textContent = 'Enter a username and code to join a chat';
       document.getElementById('usernameConnectInput').value = username || '';
+      document.getElementById('usernameConnectInput').focus();
     };
 
     document.getElementById('joinWithUsernameButton').onclick = () => {
       const usernameInput = document.getElementById('usernameInput').value.trim();
       if (!validateUsername(usernameInput)) {
         showStatusMessage('Invalid username: 1-16 alphanumeric characters.');
+        document.getElementById('usernameInput').focus();
         return;
       }
       username = usernameInput;
       localStorage.setItem('username', username);
       console.log('Username set in localStorage:', username);
-      code = generateCode(); // Generate new code for new chat
+      code = generateCode();
       codeDisplayElement.textContent = `Your code: ${code}`;
       codeDisplayElement.classList.remove('hidden');
       copyCodeButton.classList.remove('hidden');
@@ -1297,10 +1351,12 @@
       const inputCode = document.getElementById('codeInput').value.trim();
       if (!validateUsername(usernameInput)) {
         showStatusMessage('Invalid username: 1-16 alphanumeric characters.');
+        document.getElementById('usernameConnectInput').focus();
         return;
       }
       if (!validateCode(inputCode)) {
         showStatusMessage('Invalid code format: xxxx-xxxx-xxxx-xxxx.');
+        document.getElementById('codeInput').focus();
         return;
       }
       username = usernameInput;
@@ -1338,6 +1394,7 @@
       statusElement.textContent = 'Start a new chat or connect to an existing one';
       messages.classList.remove('waiting');
       stopKeepAlive();
+      document.getElementById('startChatToggleButton').focus();
     };
 
     document.getElementById('backButtonConnect').onclick = () => {
@@ -1351,6 +1408,7 @@
       statusElement.textContent = 'Start a new chat or connect to an existing one';
       messages.classList.remove('waiting');
       stopKeepAlive();
+      document.getElementById('connectToggleButton').focus();
     };
 
     document.getElementById('sendButton').onclick = () => {
@@ -1358,6 +1416,8 @@
       const message = messageInput.value.trim();
       if (message) {
         sendMessage(message);
+        messageInput.value = '';
+        messageInput.focus();
       }
     };
 
@@ -1370,6 +1430,7 @@
       if (file) {
         sendImage(file);
         event.target.value = '';
+        document.getElementById('imageButton').focus();
       }
     };
 
@@ -1384,6 +1445,8 @@
         const message = event.target.value.trim();
         if (message) {
           sendMessage(message);
+          event.target.value = '';
+          event.target.focus();
         }
       }
     });
@@ -1429,6 +1492,7 @@
       codeSentToRandom = false;
       button2.disabled = false;
       stopKeepAlive();
+      document.getElementById('startChatToggleButton').focus();
     };
 
     document.getElementById('usernameInput').addEventListener('keydown', (event) => {
@@ -1463,6 +1527,7 @@
         console.error('Failed to copy text: ', err);
         showStatusMessage('Failed to copy code.');
       });
+      copyCodeButton.focus();
     };
 
     document.getElementById('button1').onclick = () => {
@@ -1474,6 +1539,7 @@
       } else {
         showStatusMessage('Cannot send: Not initiator, no code, or room is full.');
       }
+      document.getElementById('button1').focus();
     };
 
     document.getElementById('button2').onclick = () => {
@@ -1516,10 +1582,12 @@
           chatContainer.classList.add('hidden');
           statusElement.textContent = 'Please enter a username to join the chat';
           document.getElementById('usernameInput').value = username || '';
+          document.getElementById('usernameInput').focus();
           document.getElementById('joinWithUsernameButton').onclick = () => {
             const usernameInput = document.getElementById('usernameInput').value.trim();
             if (!validateUsername(usernameInput)) {
               showStatusMessage('Invalid username: 1-16 alphanumeric characters.');
+              document.getElementById('usernameInput').focus();
               return;
             }
             username = usernameInput;
@@ -1550,6 +1618,7 @@
         usernameContainer.classList.add('hidden');
         chatContainer.classList.add('hidden');
         showStatusMessage('Invalid code format. Please enter a valid code.');
+        document.getElementById('startChatToggleButton').focus();
       }
     }
   </script>
