--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       display: flex;
       justify-content: space-between;
       margin: 0.5rem 0.8rem;
-      width: calc(100% - 1.6rem + 1.4rem);
+      width: 100%;
       box-sizing: border-box;
     }
     .button-group button {
