--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       display: flex;
       align-items: flex-start;
       gap: 0.25rem;
-      padding: 0 0rem;
+      padding: 0 0.8rem;
       position: relative;
       margin-top: 0.5rem;
       width: 100%;
@@ -291,7 +291,7 @@
         padding: 0.5rem 0.75rem;
       }
       .input-container {
-        padding: 0 0.5rem;
+        padding: 0 0.3rem;
       }
     }
     #messageInput::-webkit-scrollbar {
@@ -321,7 +321,7 @@
       display: flex;
       justify-content: space-between;
       margin: 0.5rem 0.8rem;
-      width: 100%;
+      width: calc(100% - 1.6rem);
       box-sizing: border-box;
     }
     .button-group button {
@@ -331,7 +331,7 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       transition: all 0.2s ease;
       flex: 1;
-      margin: 0 0.55rem;
+      margin: 0 0.25rem;
     }
     #button1 {
       background-color: #9b59b6;
@@ -384,7 +384,7 @@
     @media (max-width: 640px) {
       .button-group {
         margin: 0.5rem 0.3rem;
-        width: calc(100% - 0.6rem + 0.4rem);
+        width: calc(100% - 0.6rem);
       }
       .button-group button {
         padding: 0.8rem 0.9rem;
@@ -491,7 +491,7 @@
     function sanitizeMessage(content) {
       const div = document.createElement('div');
       div.textContent = content;
-      return div.innerHTML.replace(/</g, '<').replace(/>/g, '>');
+      return div.innerHTML.replace(/</g, '&lt;').replace(/>/g, '&gt;');
     }
 
     function generateCode() {
@@ -923,7 +923,7 @@
       console.log(`Starting peer connection with ${targetId} for code: ${code}, offerer: ${isOfferer}`);
       if (peerConnections.has(targetId)) {
         console.log(`Cleaning up existing connection with ${targetId}`);
-        cleanupÉlémentPeerConnection(targetId);
+        cleanupPeerConnection(targetId);
       }
       const peerConnection = new RTCPeerConnection({
         iceServers: [
