--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
     #button1 {
       background-color: #9b59b6;
       color: white;
+      margin-left: -3mm;
     }
     #button1:hover {
       background-color: #8e44ad;
