--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
     #copyCodeButton {
       background-color: #10b981;
       color: white;
+      margin-left: +3mm;
     }
     #copyCodeButton:hover {
       background-color: #059669;
