--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
     #button2 {
       background-color: #f1c40f;
       color: white;
+      margin-left: -3mm;
     }
     #button2:hover {
       background-color: #d4a017;
@@ -356,7 +357,7 @@
     #copyCodeButton {
       background-color: #10b981;
       color: white;
-      margin-left: +3mm;
+      margin-left: -3mm;
     }
     #copyCodeButton:hover {
       background-color: #059669;
