--- a/index.html
+++ b/index.html
@@ -344,7 +344,6 @@
     #button2 {
       background-color: #f1c40f;
       color: white;
-      margin-left: -3mm;
     }
     #button2:hover {
       background-color: #d4a017;
@@ -357,7 +356,7 @@
     #copyCodeButton {
       background-color: #10b981;
       color: white;
-      margin-left: -3mm;
+      margin-right: -3mm;
     }
     #copyCodeButton:hover {
       background-color: #059669;
