--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     .message-bubble img {
       max-width: 100%;
       border-radius: 0.5rem;
-      margin-top: 0.25rem;
+      margin-top: 0.15rem;
       margin-bottom: 0.5rem;
     }
     .message-bubble.self {
@@ -269,6 +269,7 @@
       box-sizing: border-box;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       transition: all 0.2s ease;
+      margin-left: -2mm; /* Added to shift the text box 2mm to the left */
     }
     #imageButton {
       width: 2.5rem;
