--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
       box-sizing: border-box;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       transition: all 0.2s ease;
-      margin-left: -6.25mm; /* Added to shift the text box 2mm to the left */
+      margin-left: -3mm; /* Added to shift the text box 2mm to the left */
+      margin-right: -1mm;
     }
     #imageButton {
       width: 2.5rem;
