--- a/index.html
+++ b/index.html
@@ -104,56 +104,29 @@
       #maxClientsRadios {
         display: grid;
         grid-template-columns: repeat(5, minmax(0, 1fr));
-        grid-template-rows: auto auto;
-        grid-gap: 0.75rem;
+        gap: 0.3rem;
         justify-items: center;
       }
-      #maxClientsRadios label:nth-child(1) {
-        grid-row: 1;
-        grid-column: 1;
-      }
-      #maxClientsRadios label:nth-child(2) {
-        grid-row: 1;
-        grid-column: 2;
-      }
-      #maxClientsRadios label:nth-child(3) {
-        grid-row: 1;
-        grid-column: 3;
-      }
-      #maxClientsRadios label:nth-child(4) {
-        grid-row: 1;
-        grid-column: 4;
-      }
-      #maxClientsRadios label:nth-child(5) {
-        grid-row: 1;
-        grid-column: 5;
-      }
-      #maxClientsRadios label:nth-child(6) {
-        grid-row: 2;
-        grid-column: 1;
-      }
-      #maxClientsRadios label:nth-child(7) {
-        grid-row: 2;
-        grid-column: 2;
-      }
-      #maxClientsRadios label:nth-child(8) {
-        grid-row: 2;
-        grid-column: 3;
-      }
-      #maxClientsRadios label:nth-child(9) {
-        grid-row: 2;
-        grid-column: 4;
-      }
-      #maxClientsRadios label {
-        margin: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
+      #maxClientsRadios button {
+        background-color: #3b82f6; /* Blue like messageInput */
+        color: white;
+        border-radius: 0.5rem;
+        padding: 0.4rem;
         font-size: 0.9rem;
+        width: 100%;
+        text-align: center;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        transition: all 0.2s ease;
       }
-      #maxClientsRadios input[type="radio"] {
-        margin-right: 0.2rem;
+      #maxClientsRadios button.active {
+        background-color: #10b981; /* Green like imageButton */
+      }
+      #maxClientsRadios button:hover:not(:disabled) {
+        background-color: #1d4ed8; /* Darker blue on hover */
+      }
+      #maxClientsRadios button:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
       }
     }
     .message-bubble {
@@ -269,7 +242,7 @@
       box-sizing: border-box;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       transition: all 0.2s ease;
-      margin-left: -3mm; /* Added to shift the text box 2mm to the left */
+      margin-left: -3mm;
     }
     #imageButton {
       width: 2.5rem;
@@ -458,7 +431,7 @@
     </div>
     <div id="maxClientsContainer" class="hidden flex flex-col justify-center bg-black p-4 rounded-lg shadow-lg">
       <span class="text-white mb-2 font-bold">Max Users</span>
-      <div id="maxClientsRadios" class="flex flex-col space-y-2" role="radiogroup" aria-label="Select maximum number of users"></div>
+      <div id="maxClientsRadios" class="grid grid-cols-5 gap-2" role="radiogroup" aria-label="Select maximum number of users"></div>
     </div>
   </div>
   <div id="helpModal" class="help-modal" role="dialog" aria-label="Help information" tabindex="-1">
@@ -494,7 +467,7 @@
     function sanitizeMessage(content) {
       const div = document.createElement('div');
       div.textContent = content;
-      return div.innerHTML.replace(/</g, '&lt;').replace(/>/g, '&gt;');
+      return div.innerHTML.replace(/</g, '<').replace(/>/g, '>');
     }
 
     function generateCode() {
@@ -874,25 +847,19 @@
       if (isInitiator) {
         maxClientsContainer.classList.remove('hidden');
         for (let n = 2; n <= 10; n++) {
-          const label = document.createElement('label');
-          label.className = 'text-white flex items-center';
-          const input = document.createElement('input');
-          input.type = 'radio';
-          input.name = 'maxClients';
-          input.value = n;
-          input.className = 'mr-2';
-          input.checked = n === maxClients;
-          input.setAttribute('aria-label', `Set maximum users to ${n}`);
-          input.addEventListener('change', () => {
+          const button = document.createElement('button');
+          button.textContent = n;
+          button.setAttribute('aria-label', `Set maximum users to ${n}`);
+          button.className = n === maxClients ? 'active' : '';
+          button.disabled = !isInitiator;
+          button.addEventListener('click', () => {
             if (isInitiator) {
-              setMaxClients(parseInt(input.value));
+              setMaxClients(n);
+              document.querySelectorAll('#maxClientsRadios button').forEach(btn => btn.classList.remove('active'));
+              button.classList.add('active');
             }
           });
-          const span = document.createElement('span');
-          span.textContent = n;
-          label.appendChild(input);
-          label.appendChild(span);
-          maxClientsRadios.appendChild(label);
+          maxClientsRadios.appendChild(button);
         }
       } else {
         maxClientsContainer.classList.add('hidden');
@@ -901,10 +868,11 @@
 
     function updateMaxClientsUI() {
       statusElement.textContent = isConnected ? `Connected (${totalClients}/${maxClients} connections)` : 'Waiting for connection...';
-      const inputs = document.querySelectorAll('input[name="maxClients"]');
-      inputs.forEach(input => {
-        input.checked = parseInt(input.value) === maxClients;
-        input.disabled = !isInitiator;
+      const buttons = document.querySelectorAll('#maxClientsRadios button');
+      buttons.forEach(button => {
+        const value = parseInt(button.textContent);
+        button.classList.toggle('active', value === maxClients);
+        button.disabled = !isInitiator;
       });
       maxClientsContainer.classList.toggle('hidden', !isInitiator);
       if (!isConnected) {
