--- a/index.html
+++ b/index.html
@@ -378,6 +378,34 @@
         padding: 0.25rem 0;
       }
     }
+    /* Desktop-specific styles for maxClientsRadios */
+    #maxClientsRadios {
+      display: grid;
+      grid-template-columns: repeat(5, minmax(0, 1fr));
+      gap: 0.5rem;
+      justify-items: center;
+    }
+    #maxClientsRadios button {
+      background-color: #3b82f6;
+      color: white;
+      border-radius: 0.5rem;
+      padding: 0.5rem;
+      font-size: 1rem;
+      width: 100%;
+      text-align: center;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      transition: all 0.2s ease;
+    }
+    #maxClientsRadios button.active {
+      background-color: #10b981;
+    }
+    #maxClientsRadios button:hover:not(:disabled) {
+      background-color: #1d4ed8;
+    }
+    #maxClientsRadios button:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+    }
   </style>
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center">
@@ -842,9 +870,16 @@
     };
 
     function initializeMaxClientsUI() {
+      console.log('initializeMaxClientsUI called, isInitiator:', isInitiator);
       const maxClientsRadios = document.getElementById('maxClientsRadios');
+      if (!maxClientsRadios) {
+        console.error('maxClientsRadios element not found');
+        showStatusMessage('Error: UI initialization failed.');
+        return;
+      }
       maxClientsRadios.innerHTML = '';
       if (isInitiator) {
+        console.log('Creating buttons for maxClients, current maxClients:', maxClients);
         maxClientsContainer.classList.remove('hidden');
         for (let n = 2; n <= 10; n++) {
           const button = document.createElement('button');
@@ -854,6 +889,7 @@
           button.disabled = !isInitiator;
           button.addEventListener('click', () => {
             if (isInitiator) {
+              console.log(`Button clicked for maxClients: ${n}`);
               setMaxClients(n);
               document.querySelectorAll('#maxClientsRadios button').forEach(btn => btn.classList.remove('active'));
               button.classList.add('active');
@@ -861,14 +897,18 @@
           });
           maxClientsRadios.appendChild(button);
         }
+        console.log('Buttons appended to maxClientsRadios');
       } else {
+        console.log('Hiding maxClientsContainer for non-initiator');
         maxClientsContainer.classList.add('hidden');
       }
     }
 
     function updateMaxClientsUI() {
+      console.log('updateMaxClientsUI called, maxClients:', maxClients, 'isInitiator:', isInitiator);
       statusElement.textContent = isConnected ? `Connected (${totalClients}/${maxClients} connections)` : 'Waiting for connection...';
       const buttons = document.querySelectorAll('#maxClientsRadios button');
+      console.log('Found buttons:', buttons.length);
       buttons.forEach(button => {
         const value = parseInt(button.textContent);
         button.classList.toggle('active', value === maxClients);
@@ -885,8 +925,11 @@
     function setMaxClients(n) {
       if (isInitiator && clientId && socket.readyState === WebSocket.OPEN) {
         maxClients = Math.min(n, 10);
+        console.log(`setMaxClients called with n: ${n}, new maxClients: ${maxClients}`);
         socket.send(JSON.stringify({ type: 'set-max-clients', maxClients: maxClients, code, clientId }));
         updateMaxClientsUI();
+      } else {
+        console.warn('setMaxClients failed: not initiator or socket not open');
       }
     }
 
@@ -1620,6 +1663,12 @@
         document.getElementById('connectToggleButton').focus();
       }
     }
+
+    // Ensure maxClients UI is initialized after DOM is loaded
+    document.addEventListener('DOMContentLoaded', () => {
+      console.log('DOM loaded, initializing maxClients UI');
+      initializeMaxClientsUI();
+    });
   </script>
 </body>
 </html>
