--- a/index.html
+++ b/index.html
@@ -380,10 +380,10 @@
     }
     /* Desktop-specific styles for maxClientsRadios */
     #maxClientsRadios {
-      display: grid;
-      grid-template-columns: repeat(5, minmax(0, 1fr));
+      display: flex;
+      flex-direction: column;
       gap: 0.5rem;
-      justify-items: center;
+      align-items: center;
     }
     #maxClientsRadios button {
       background-color: #3b82f6;
@@ -391,7 +391,7 @@
       border-radius: 0.5rem;
       padding: 0.5rem;
       font-size: 1rem;
-      width: 100%;
+      width: 60px; /* Fixed width for consistency */
       text-align: center;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       transition: all 0.2s ease;
